2013-04-13 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asstm8/stm8.h,
	  sdas/asstm8/stm8mch.c,
	  sdas/asstm8/stm8pst.c,
	  src/SDCCglue.c,
	  src/stm8/gen.c,
	  src/stm8/main.c:
	  STM8: Applied patches from Valentin Dudouyt containing various fixes.

2013-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/ralloc.c:
	  Fix handling of stack part of local variables.

2013-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement basic pointer writes, fix handling of 16-bit literals.

2013-04-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: END_FUNCTION stack adjustment fix, more efficient zeroing, addition fix, return value use.

2013-04-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix for GET_VALUE_AT_ADDRESS, fixes for shift by literal, implement call by pointer, minor improvements.

2013-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Allow more operands in xor, and, or.

2013-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement integer unary minus, or fix.

2013-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement more comparisons, stack handling fix.
	* src/SDCCsymt.c:
	  STM8: Allow returning long long (not implemented in code genration yet).

2013-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Stack adjustment fixes, signed cast fix, ifx fix, GET_VALUE_AT_ADDRESS fix.

2013-04-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement cast to _Bool.
	* device/include/sdcc-lib.h,
	  device/include/asm/stm8/features.h:
	  STM8: Port feature header.
	* device/include/math.h,
	  device/include/stdarg.h:
	  STM8: Port feature configuration.

2013-04-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Allow more operand types in Ifx, implement more casts.

2013-04-06 Philipp Klaus Krause <pkk AT spth.de>
